--- a/src/ryan-pacman.html
+++ b/src/ryan-pacman.html
@@ -100,6 +100,10 @@
             transition: all 0.3s;
             font-weight: bold;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+            touch-action: manipulation;
+            -webkit-tap-highlight-color: transparent;
+            min-height: 50px;
+            min-width: 50px;
         }
 
         .control-btn:active {
@@ -234,443 +238,4 @@
     <link rel="stylesheet" href="../page-theme.css">
 </head>
 <body>
-    <a href="../index.html" style="position:fixed;top:20px;left:20px;z-index:9999;text-decoration:none;background:rgba(102,126,234,0.9);color:white;padding:10px 20px;border-radius:25px;box-shadow:0 4px 10px rgba(0,0,0,0.2)">← Home</a>
-
-    <div class="game-container">
-        <div class="game-header">
-            <h1>🎮 RYAN-PACMAN 🎮</h1>
-            <p style="color: #aaa; margin-top: 5px;">Escape the celebrities!</p>
-        </div>
-
-        <div class="game-stats">
-            <div class="stat">
-                <div class="stat-label">SCORE</div>
-                <div class="stat-value" id="score">0</div>
-            </div>
-            <div class="stat">
-                <div class="stat-label">LEVEL</div>
-                <div class="stat-value" id="level">1</div>
-            </div>
-            <div class="stat">
-                <div class="stat-label">LIVES</div>
-                <div class="stat-value" id="lives">3</div>
-            </div>
-        </div>
-
-        <canvas id="gameCanvas" width="400" height="400"></canvas>
-
-        <div class="game-info">
-            <h3>How to Play:</h3>
-            <p>🎯 Collect all the pellets to advance to the next level!</p>
-            <p>👻 Avoid the celebrity ghosts or lose a life!</p>
-            <p>⭐ Grab power pellets for temporary invincibility!</p>
-            <p id="gameStatus" style="color: #ffd93d; margin-top: 10px; font-weight: bold;">Ready to play? Press START!</p>
-        </div>
-
-        <button class="start-btn" id="startBtn">START GAME</button>
-        <button class="restart-btn hidden" id="restartBtn">RESTART GAME</button>
-
-        <div class="controls" id="controls" style="display: none;">
-            <button class="control-btn up">▲</button>
-            <button class="control-btn left">◄</button>
-            <button class="control-btn down">▼</button>
-            <button class="control-btn right">►</button>
-        </div>
-
-        <div class="keyboard-hint">
-            💡 Use arrow keys or touch buttons to move
-        </div>
-    </div>
-
-    <div class="game-over-modal hidden" id="gameOverModal">
-        <div class="game-over-content">
-            <h2 id="gameOverTitle">GAME OVER!</h2>
-            <p>Final Score: <span id="finalScore">0</span></p>
-            <p>Level Reached: <span id="finalLevel">1</span></p>
-            <button class="restart-btn" onclick="location.reload()">PLAY AGAIN</button>
-        </div>
-    </div>
-
-    <script>
-        const canvas = document.getElementById('gameCanvas');
-        const ctx = canvas.getContext('2d');
-        const startBtn = document.getElementById('startBtn');
-        const restartBtn = document.getElementById('restartBtn');
-        const gameOverModal = document.getElementById('gameOverModal');
-        const controls = document.getElementById('controls');
-        const scoreDisplay = document.getElementById('score');
-        const levelDisplay = document.getElementById('level');
-        const livesDisplay = document.getElementById('lives');
-        const gameStatus = document.getElementById('gameStatus');
-
-        // Game variables
-        let gameRunning = false;
-        let gameOver = false;
-        let score = 0;
-        let level = 1;
-        let lives = 3;
-
-        // Grid setup
-        const gridSize = 20;
-        const cols = canvas.width / gridSize;
-        const rows = canvas.height / gridSize;
-
-        // Ryan (Pac-Man)
-        const ryan = {
-            x: Math.floor(cols / 2),
-            y: Math.floor(rows / 2),
-            vx: 0,
-            vy: 0,
-            nextVx: 0,
-            nextVy: 0,
-            mouthOpen: 0,
-            invincible: false,
-            invincibleTime: 0
-        };
-
-        // Ghosts
-        const ghosts = [
-            { x: 1, y: 1, vx: 1, vy: 0, color: '#FF6B9D', name: 'P-Diddy' },
-            { x: cols - 2, y: 1, vx: -1, vy: 0, color: '#C44569', name: 'R Kelly' },
-            { x: 1, y: rows - 2, vx: 0, vy: 1, color: '#F8B500', name: 'OJ Simpson' },
-            { x: cols - 2, y: rows - 2, vx: 0, vy: -1, color: '#4A90E2', name: 'Bill Clinton' }
-        ];
-
-        // Pellets
-        let pellets = [];
-        let powerPellets = [];
-
-        function initializePellets() {
-            pellets = [];
-            powerPellets = [];
-            for (let i = 0; i < cols; i++) {
-                for (let j = 0; j < rows; j++) {
-                    if ((i !== ryan.x || j !== ryan.y) && !ghosts.some(g => g.x === i && g.y === j)) {
-                        if (Math.random() < 0.08) {
-                            pellets.push({ x: i, y: j });
-                        }
-                    }
-                }
-            }
-            // Add power pellets
-            powerPellets = [
-                { x: 1, y: 1 },
-                { x: cols - 2, y: 1 },
-                { x: 1, y: rows - 2 },
-                { x: cols - 2, y: rows - 2 }
-            ];
-        }
-
-        function startGame() {
-            gameRunning = true;
-            gameOver = false;
-            score = 0;
-            level = 1;
-            lives = 3;
-            ryan.x = Math.floor(cols / 2);
-            ryan.y = Math.floor(rows / 2);
-            ryan.vx = 0;
-            ryan.vy = 0;
-            ryan.invincible = false;
-            ryan.invincibleTime = 0;
-            
-            ghosts.forEach((g, i) => {
-                g.x = [1, cols - 2, 1, cols - 2][i];
-                g.y = [1, 1, rows - 2, rows - 2][i];
-            });
-
-            initializePellets();
-            startBtn.classList.add('hidden');
-            restartBtn.classList.remove('hidden');
-            controls.style.display = 'grid';
-            gameStatus.textContent = '🎮 Game Started! Collect pellets!';
-            gameLoop();
-        }
-
-        function updateRyan() {
-            ryan.vx = ryan.nextVx;
-            ryan.vy = ryan.nextVy;
-
-            const nextX = ryan.x + ryan.vx;
-            const nextY = ryan.y + ryan.vy;
-
-            if (nextX >= 0 && nextX < cols && nextY >= 0 && nextY < rows) {
-                ryan.x = nextX;
-                ryan.y = nextY;
-            }
-
-            ryan.mouthOpen = (ryan.mouthOpen + 0.1) % (Math.PI * 2);
-
-            // Check pellet collision
-            pellets = pellets.filter(p => {
-                if (p.x === ryan.x && p.y === ryan.y) {
-                    score += 10;
-                    return false;
-                }
-                return true;
-            });
-
-            // Check power pellet collision
-            powerPellets = powerPellets.filter(p => {
-                if (p.x === ryan.x && p.y === ryan.y) {
-                    score += 50;
-                    ryan.invincible = true;
-                    ryan.invincibleTime = 300;
-                    return false;
-                }
-                return true;
-            });
-
-            if (ryan.invincible) {
-                ryan.invincibleTime--;
-                if (ryan.invincibleTime <= 0) {
-                    ryan.invincible = false;
-                }
-            }
-        }
-
-        function updateGhosts() {
-            ghosts.forEach(ghost => {
-                // Simple AI - change direction randomly
-                if (Math.random() < 0.02) {
-                    const directions = [
-                        { vx: 1, vy: 0 },
-                        { vx: -1, vy: 0 },
-                        { vx: 0, vy: 1 },
-                        { vx: 0, vy: -1 }
-                    ];
-                    const dir = directions[Math.floor(Math.random() * directions.length)];
-                    ghost.vx = dir.vx;
-                    ghost.vy = dir.vy;
-                }
-
-                let nextX = ghost.x + ghost.vx;
-                let nextY = ghost.y + ghost.vy;
-
-                if (nextX < 0 || nextX >= cols || nextY < 0 || nextY >= rows) {
-                    ghost.vx = -ghost.vx;
-                    ghost.vy = -ghost.vy;
-                    nextX = ghost.x + ghost.vx;
-                    nextY = ghost.y + ghost.vy;
-                }
-
-                ghost.x = nextX;
-                ghost.y = nextY;
-            });
-        }
-
-        function checkCollisions() {
-            if (ryan.invincible) return;
-
-            for (let ghost of ghosts) {
-                if (ghost.x === ryan.x && ghost.y === ryan.y) {
-                    lives--;
-                    if (lives <= 0) {
-                        endGame();
-                    } else {
-                        ryan.x = Math.floor(cols / 2);
-                        ryan.y = Math.floor(rows / 2);
-                        gameStatus.textContent = `💔 Hit! ${lives} lives left!`;
-                    }
-                    return;
-                }
-            }
-        }
-
-        function checkLevelComplete() {
-            if (pellets.length === 0 && powerPellets.length === 0) {
-                level++;
-                score += 100 * level;
-                ryan.x = Math.floor(cols / 2);
-                ryan.y = Math.floor(rows / 2);
-                ghosts.forEach((g, i) => {
-                    g.x = [1, cols - 2, 1, cols - 2][i];
-                    g.y = [1, 1, rows - 2, rows - 2][i];
-                });
-                initializePellets();
-                gameStatus.textContent = `🎉 Level ${level}! More ghosts incoming!`;
-            }
-        }
-
-        function endGame() {
-            gameRunning = false;
-            gameOver = true;
-            controls.style.display = 'none';
-            document.getElementById('gameOverTitle').textContent = 'GAME OVER!';
-            document.getElementById('finalScore').textContent = score;
-            document.getElementById('finalLevel').textContent = level;
-            gameOverModal.classList.remove('hidden');
-        }
-
-        function drawRyan() {
-            const centerX = (ryan.x + 0.5) * gridSize;
-            const centerY = (ryan.y + 0.5) * gridSize;
-            const radius = gridSize * 0.4;
-
-            ctx.fillStyle = ryan.invincible ? '#FFD700' : '#FFFF00';
-            ctx.beginPath();
-            ctx.arc(centerX, centerY, radius, Math.abs(Math.sin(ryan.mouthOpen)) * 0.3, Math.PI * 2 - Math.abs(Math.sin(ryan.mouthOpen)) * 0.3);
-            ctx.lineTo(centerX, centerY);
-            ctx.fill();
-
-            // Eyes
-            ctx.fillStyle = '#000';
-            ctx.beginPath();
-            ctx.arc(centerX - radius * 0.3, centerY - radius * 0.2, radius * 0.15, 0, Math.PI * 2);
-            ctx.fill();
-        }
-
-        function drawGhosts() {
-            ghosts.forEach(ghost => {
-                const x = ghost.x * gridSize;
-                const y = ghost.y * gridSize;
-
-                ctx.fillStyle = ghost.color;
-                ctx.fillRect(x + 2, y + 2, gridSize - 4, gridSize - 6);
-
-                // Ghost bottom
-                for (let i = 0; i < 3; i++) {
-                    ctx.fillRect(x + 2 + i * 6, y + gridSize - 8, 4, 4);
-                }
-
-                // Eyes
-                ctx.fillStyle = '#FFF';
-                ctx.fillRect(x + 6, y + 6, 3, 3);
-                ctx.fillRect(x + 11, y + 6, 3, 3);
-                ctx.fillStyle = '#000';
-                ctx.fillRect(x + 7, y + 7, 1, 1);
-                ctx.fillRect(x + 12, y + 7, 1, 1);
-            });
-        }
-
-        function drawPellets() {
-            ctx.fillStyle = '#FFB6C1';
-            pellets.forEach(p => {
-                ctx.beginPath();
-                ctx.arc((p.x + 0.5) * gridSize, (p.y + 0.5) * gridSize, 2, 0, Math.PI * 2);
-                ctx.fill();
-            });
-
-            ctx.fillStyle = '#FFD700';
-            powerPellets.forEach(p => {
-                ctx.beginPath();
-                ctx.arc((p.x + 0.5) * gridSize, (p.y + 0.5) * gridSize, 6, 0, Math.PI * 2);
-                ctx.fill();
-            });
-        }
-
-        function draw() {
-            ctx.fillStyle = '#0f0f1e';
-            ctx.fillRect(0, 0, canvas.width, canvas.height);
-
-            ctx.strokeStyle = '#667ee6';
-            ctx.lineWidth = 1;
-            for (let i = 0; i <= cols; i++) {
-                ctx.beginPath();
-                ctx.moveTo(i * gridSize, 0);
-                ctx.lineTo(i * gridSize, canvas.height);
-                ctx.stroke();
-            }
-            for (let i = 0; i <= rows; i++) {
-                ctx.beginPath();
-                ctx.moveTo(0, i * gridSize);
-                ctx.lineTo(canvas.width, i * gridSize);
-                ctx.stroke();
-            }
-
-            drawPellets();
-            drawGhosts();
-            drawRyan();
-        }
-
-        function gameLoop() {
-            if (!gameRunning) return;
-
-            updateRyan();
-            updateGhosts();
-            checkCollisions();
-            checkLevelComplete();
-            draw();
-            updateUI();
-
-            requestAnimationFrame(gameLoop);
-        }
-
-        function updateUI() {
-            scoreDisplay.textContent = score;
-            levelDisplay.textContent = level;
-            livesDisplay.textContent = lives;
-        }
-
-        // Keyboard controls
-        document.addEventListener('keydown', (e) => {
-            if (!gameRunning) return;
-            switch (e.key) {
-                case 'ArrowUp':
-                    ryan.nextVx = 0;
-                    ryan.nextVy = -1;
-                    e.preventDefault();
-                    break;
-                case 'ArrowDown':
-                    ryan.nextVx = 0;
-                    ryan.nextVy = 1;
-                    e.preventDefault();
-                    break;
-                case 'ArrowLeft':
-                    ryan.nextVx = -1;
-                    ryan.nextVy = 0;
-                    e.preventDefault();
-                    break;
-                case 'ArrowRight':
-                    ryan.nextVx = 1;
-                    ryan.nextVy = 0;
-                    e.preventDefault();
-                    break;
-            }
-        });
-
-        // Touch controls
-        document.querySelectorAll('.control-btn').forEach(btn => {
-            btn.addEventListener('touchstart', (e) => {
-                e.preventDefault();
-                if (btn.classList.contains('up')) {
-                    ryan.nextVx = 0;
-                    ryan.nextVy = -1;
-                } else if (btn.classList.contains('down')) {
-                    ryan.nextVx = 0;
-                    ryan.nextVy = 1;
-                } else if (btn.classList.contains('left')) {
-                    ryan.nextVx = -1;
-                    ryan.nextVy = 0;
-                } else if (btn.classList.contains('right')) {
-                    ryan.nextVx = 1;
-                    ryan.nextVy = 0;
-                }
-            });
-
-            btn.addEventListener('click', (e) => {
-                e.preventDefault();
-                if (btn.classList.contains('up')) {
-                    ryan.nextVx = 0;
-                    ryan.nextVy = -1;
-                } else if (btn.classList.contains('down')) {
-                    ryan.nextVx = 0;
-                    ryan.nextVy = 1;
-                } else if (btn.classList.contains('left')) {
-                    ryan.nextVx = -1;
-                    ryan.nextVy = 0;
-                } else if (btn.classList.contains('right')) {
-                    ryan.nextVx = 1;
-                    ryan.nextVy = 0;
-                }
-            });
-        });
-
-        startBtn.addEventListener('click', startGame);
-        restartBtn.addEventListener('click', startGame);
-
-        // Initial draw
-        draw();
-    </script>
-</body>
-</html>
+    <a href="../index.html" style="position:fixed;top:20px;left:20px;z-index:9999;text-decoration:none;background:rgba(102,126,234
