fix game initialization - add pellets before initial draw

--- a/src/ryan-pacman.html
+++ b/src/ryan-pacman.html
@@ -973,6 +973,9 @@
         startBtn.addEventListener('click', startGame);
         restartBtn.addEventListener('click', startGame);
 
+        // Initialize pellets for initial draw
+        initializePellets();
+
         // Initial draw
         draw();
     </script>
