fix game over on load - don't initialize pellets before game starts

--- a/src/ryan-pacman.html
+++ b/src/ryan-pacman.html
@@ -973,10 +973,7 @@
         startBtn.addEventListener('click', startGame);
         restartBtn.addEventListener('click', startGame);
 
-        // Initialize pellets for initial draw
-        initializePellets();
-
-        // Initial draw
+        // Initial draw (without pellets - just show empty maze)
         draw();
     </script>
 </body>
