--- a/src/ryan-pacman.html
+++ b/src/ryan-pacman.html
@@ -487,7 +487,7 @@
             // Place pellets in all open spaces
             for (let j = 0; j < rows; j++) {
                 for (let i = 0; i < cols; i++) {
-                    if (maze[j][i] === 0 && !(i === ryan.x && j === ryan.y)) {
+                    if (maze[j][i] === 0) {
                         // Don't place regular pellets where power pellets will go
                         if (!((i === 1 && j === 1) || (i === 18 && j === 1) || (i === 1 && j === 18) || (i === 18 && j === 18))) {
                             pellets.push({ x: i, y: j });
