--- a/src/ryan-pacman.html
+++ b/src/ryan-pacman.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ryan-Pacman Enhanced v2</title>
+    <title>Pigman</title>
     <style>
         * {
             margin: 0;
@@ -348,8 +348,8 @@
 
     <div class="game-container">
         <div class="game-header">
-            <h1>🎮 RYAN-PACMAN 🎮</h1>
-            <p style="color: #aaa; margin-top: 5px;">Escape the celebrities! Enhanced Edition</p>
+            <h1>🐷 PIGMAN 🐷</h1>
+            <p style="color: #aaa; margin-top: 5px;">Help the pig escape the people!</p>
         </div>
 
         <div class="game-stats">
