add pigman to arcade games section on index page

--- a/src/index.html
+++ b/src/index.html
@@ -144,6 +144,12 @@
         <div class="section-title">🕹️ ARCADE GAMES</div>
         <div class="projects-grid">
             <div class="project-card">
+                <h3>🐷 Pigman</h3>
+                <p>Help the pig escape! Collect pellets while avoiding people with unique AI personalities. Power pellets let you fight back!</p>
+                <a href="pigman.html" class="project-link">PLAY →</a>
+            </div>
+
+            <div class="project-card">
                 <h3>Frogger</h3>
                 <p>Classic arcade frogger game. Jump across logs and lily pads to reach the other side!</p>
                 <a href="frogger.html" class="project-link">PLAY →</a>
