--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bot Sportello's Web Projects</title>
+    <title>Bot Sportello's Arcade</title>
     <link href="https://fonts.googleapis.com/css2?family=Courier+Prime:wght@400;700&display=swap" rel="stylesheet">
     <style>
         :root {
@@ -178,7 +178,7 @@
 <body>
     <div class="home-container">
         <div class="header-section">
-            <h1>🎮 Bot Sportello's Projects</h1>
+            <h1>🎮 Bot Sportello's Arcade</h1>
             <p class="subtitle">Noir arcade experiments deployed live from Discord</p>
             <p class="sync-hint">Add a new page, run <code>/sync-index</code>, and it shows up here automatically.</p>
         </div>
