fix terminal memory card flip animation

--- a/src/terminal-memory.html
+++ b/src/terminal-memory.html
@@ -134,6 +134,7 @@
             background: linear-gradient(135deg, #1a1a2e, #16213e);
             border-color: #00ff00;
             box-shadow: 0 0 20px rgba(0, 255, 0, 0.5);
+            transform: rotateY(0deg);
         }
         
         .card-back::before {
